--- a/main.css
+++ b/main.css
@@ -26,7 +26,8 @@ tr:nth-child(odd) {
     background-color: #f2f2f2;
 }
 div {
-    background-color: blue;
+  /* David to change. */
+    background-color: red; 
     text-align: right;
 }
 
