--- a/main.css
+++ b/main.css
@@ -26,8 +26,7 @@ tr:nth-child(odd) {
     background-color: #f2f2f2;
 }
 div {
-  /* David to change. */
-    background-color: red; 
+    background-color: #10aa92; 
     text-align: right;
 }
 
